--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* ----------------------------------
 
-Template Name: Dustra- Factory & Industrial Template
+Template Name: Milltech
 Author: validtheme
 Description:
 Version: 1.0.4
